final_check.txt
    Checking rustom v0.1.0 (/Users/hmtanbir/www/projects/open-source/rustom)
error[E0583]: file not found for module `encryption`
 --> src/services/mod.rs:5:1
  |
5 | pub mod encryption;
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `encryption`, create file "src/services/encryption.rs" or "src/services/encryption/mod.rs"
  = note: if there is a `mod encryption` elsewhere in the crate already, import it with `use crate::...` instead

error[E0432]: unresolved import `crate::domain`
 --> src/infrastructure/redis.rs:3:12
  |
3 | use crate::domain::AppError;
  |            ^^^^^^ could not find `domain` in the crate root

error[E0432]: unresolved import `http_body_util`
 --> src/middleware/payload_encryption.rs:8:5
  |
8 | use http_body_util::BodyExt;
  |     ^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `http_body_util`
  |
  = help: if you wanted to use a crate named `http_body_util`, use `cargo add http_body_util` to add it to your `Cargo.toml`

error[E0432]: unresolved import `crate::models::AppError`
  --> src/services/user.rs:12:5
   |
12 |     AppError, Claims, User, UserLoginRequestDto, UserLoginResponseDto,
   |     ^^^^^^^^ no `AppError` in `models`
   |
   = help: consider importing this enum instead:
           crate::errors::AppError

warning: unused imports: `delete` and `patch`
 --> src/controllers/api/v1/mod.rs:6:26
  |
6 |     routing::{get, post, patch, delete},
  |                          ^^^^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `registration_controller`, `sessions_controller`, and `users_controller`
 --> src/docs/mod.rs:5:35
  |
5 | use crate::controllers::api::v1::{registration_controller, sessions_controller, users_controller};
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> src/middleware/auth.rs:47:20
   |
47 |             if let Ok(decrypted_string) = EncryptionService::decrypt(&token) {
   |                    ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `std::prelude::v1::Ok`
  --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/result.rs:561:5

error[E0599]: no function or associated item named `openapi` found for struct `ApiDoc` in the current scope
  --> src/router.rs:18:82
   |
18 |         .merge(SwaggerUi::new("/api/docs").url("/api/docs/openapi.json", ApiDoc::openapi()))
   |                                                                                  ^^^^^^^ function or associated item not found in `ApiDoc`
   |
  ::: src/docs/mod.rs:30:1
   |
30 | pub struct ApiDoc;
   | ----------------- function or associated item `openapi` not found for this struct
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `OpenApi` which provides `openapi` is implemented but not in scope; perhaps you want to import it
   |
 1 + use utoipa::OpenApi;
   |

Some errors have detailed explanations: E0277, E0432, E0583, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `rustom` (lib) generated 2 warnings
error: could not compile `rustom` (lib) due to 6 previous errors; 2 warnings emitted
